@@ -5,6 +5,8 @@ QT_PRIVATE = gui widgets-private script
 DEFINES   += QT_NO_USING_NAMESPACE
 #win32-msvc*|win32-icc:QMAKE_LFLAGS += /BASE:0x66000000
 
+QMAKE_DOCS = $$PWD/doc/qtscripttools.qdocconf
+
 load(qt_module)
 
 include(debugging/debugging.pri)
