@@ -22,6 +22,8 @@ information about a particular change.
 General Improvements
 --------------------
 
+-modularized Qt Script Tools documentation; did not exist previously
+
 Third party components
 ----------------------
 
@@ -44,4 +46,3 @@ Third party components
 ****************************************************************************
 *                          Plugins                                         *
 ****************************************************************************
-
